--- a/portfolio.css
+++ b/portfolio.css
@@ -431,7 +431,7 @@ background-color:rgb(241, 241, 241);
     height: 50px;
     position: absolute;
 bottom:  80%;
-left: ;
+left:55px ;
 border-radius: 50%;
 cursor: pointer;
 
